--- a/project/static_site/index.html
+++ b/project/static_site/index.html
@@ -1,81 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的网页</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        header {
-            background: #50b3a2;
-            color: white;
-            padding-top: 30px;
-            min-height: 70px;
-            border-bottom: #e8491d 3px solid;
-        }
-        header a {
-            color: #ffffff;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 16px;
-        }
-        header ul {
-            padding: 0;
-            list-style: none;
-        }
-        header li {
-            display: inline;
-            padding: 0 20px 0 20px;
-        }
-        header #branding {
-            float: left;
-        }
-        header #branding h1 {
-            margin: 0;
-        }
-        header nav {
-            float: right;
-            margin-top: 10px;
-        }
-        header .highlight, header .current a {
-            color: #e8491d;
-            font-weight: bold;
-        }
-        header a:hover {
-            color: #ffffff;
-            font-weight: bold;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <div id="branding">
-                <h1>我的博客</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li class="current"><a href="index.html">首页</a></li>
-                    <li><a href="about.html">关于</a></li>
-                    <li><a href="services.html">服务</a></li>
-                    <li><a href="contact.html">联系我们</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <div class="container">
-        <h1>欢迎来到我的网页</h1>
-        <p>这是一个简单的HTML页面示例。</p>
-    </div>
-</body>
+<!DOCTYPE html> 
+<html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<title>Liso the Friendly Web Server</title>
+		<link rel="stylesheet" type="text/css" href="style.css" /> 
+<style>
+.login-button { /* 按钮美化 */
+	width: 200px; /* 宽度 */
+	height: 30px; /* 高度 */
+	border-width: 0px; /* 边框宽度 */
+	border-radius: 3px; /* 边框半径 */
+	background: #0E90FF; /* 背景颜色 */
+	cursor: pointer; /* 鼠标移入按钮范围时出现手势 */
+	outline: none; /* 不显示轮廓线 */
+	font-family: Microsoft YaHei; /* 设置字体 */
+	color: white; /* 字体颜色 */
+	font-size: 17px; /* 字体大小 */
+}
+.login-button:hover { /* 鼠标移入按钮范围时改变颜色 */
+	background: #5599FF;
+}
+img{
+	height:auto;
+	width:auto\9;
+	width:100%;
+}
+</style>
+	</head>
+
+	<body>
+		<div id="page">
+			<img src="images/liso_header.png" alt="Liso the Friendly Web Server"></img>
+			<p>Welcome to the Liso 1.0 web server.  If you see this page then
+			congratulations!  Your Liso web server is up and running now!</p>
+			<p>This Liso web server was implemented by: Tommy Gong
+			&#60;<a href="mailto:tommygong@tju.edu.cn">tommygong@tju.edu.cn
+			</a>&#62;</p>
+
+	
+			<form method="get" action="/cgiget.html">
+				<p> Test CGI request with GET method: <button class="login-button" type="submit">GET METHOD</button></p>
+			</form>
+			<form method="get" action="/cgipost.html">
+				<p> Test CGI request with POST method: <button class="login-button" type="submit">POST METHOD</button></p>
+			</form>
+			
+			<img src="images/profile.jpg" alt="profile"></img>
+
+		</div>
+	</body>
+
 </html>
