--- a/project/static_site/index.html
+++ b/project/static_site/index.html
@@ -41,9 +41,9 @@ img{
 			<form method="get" action="/cgiget.html">
 				<p> Test CGI request with GET method: <button class="login-button" type="submit">GET METHOD</button></p>
 			</form>
-			<form method="get" action="/cgipost.html">
+			<!-- <form method="get" action="/cgipost.html">
 				<p> Test CGI request with POST method: <button class="login-button" type="submit">POST METHOD</button></p>
-			</form>
+			</form> -->
 			
 			<img src="images/profile.jpg" alt="profile"></img>
 
